add upgrade information, fix typos

--- a/src/content/docs/account/upgrade your server.mdx
+++ b/src/content/docs/account/upgrade your server.mdx
@@ -8,9 +8,13 @@ sidebar:
 
 Follow these easy steps to upgrade or downgrade your servers CPU cores/threads, Ram or Storage with Game Host Bros.
 
+:::danger
+Upgrades may not apply automatically at this time, so there may be a wait of a few hours. 
+:::
+
 1. Login to the [Billing Portal](https://portal.gamehostbros.com/).
 2. Under Your `Active Products/Services`, look for the service you want to upgrade and click `VIEW DETAILS`.
 3. In the sidebar on the left, select `Upgrade/Downgrade Options`.
 4. Change the settings you want then click `Continue`.
 
-Sometimes this will be disabled if we're close to capacity so please reach out to support if this is the case.
+Sometimes this will be disabled if we're close to capacity, so please reach out to support if this is the case.
