--- a/src/content/docs/games/Palworld/recover save.mdx
+++ b/src/content/docs/games/Palworld/recover save.mdx
@@ -9,7 +9,7 @@ sidebar:
 There are multiple workarounds that can be attempted to recover a Palworld save.
 
 :::danger
-Continue at your own risk - there is no gurantee that this will work.
+Continue at your own risk - there is no guarantee that this will work.
 :::
 
 ### Workaround #1
@@ -39,7 +39,7 @@ Pal/Saved/SaveGames/0/<bunch of numbers and capital letters>/
 
 Once in this directory, press the three dots on the far right and then press "Compress"
 
-**Step 3:** Once compressed, proceed to download this compressed file and store it in a secure location. This is your player data and will be needed incase something goes wrong.
+**Step 3:** Once compressed, proceed to download this compressed file and store it in a secure location. This is your player data and will be needed in case something goes wrong.
 
 **Step 4:** Launch Palworld Game Client, connect to the server and create a new character.
 
@@ -51,7 +51,7 @@ Once in this directory, press the three dots on the far right and then press "Co
 
 **Step 8:** You must now identify the file that is associated with the character you just created, the easiest way to do this is to look at the last modified time of the files - the one with the earliest modified time is your save.
 
-**Step 9:** Copy the the name of the file that represents the character you just created.
+**Step 9:** Copy the name of the file that represents the character you just created.
 
 **Step 10:** Once you have the name of your character, you will want to find the file name of your old save file (via the file that you had compressed earlier), once you have this name, you will want to replace the name of the old save with the name of the new save.
 
