Update cancel your service.mdx

--- a/src/content/docs/account/cancel your service.mdx
+++ b/src/content/docs/account/cancel your service.mdx
@@ -14,5 +14,16 @@ Cancelling your service with Game Host Bros is easy and hassle-free. Follow thes
 4. Describe why you want to cancel then click the `REQUEST CANCELLATION` button.
 
 :::note
-Were you having trouble getting things setup? Remember we are always here to help you grow your server. Jump on [Discord](https://discord.gg/FN4XgbAwzr) and let us know what issues you're facing.
+Were you having trouble getting things setup? Remember we are always here to help with your server. Jump on [Discord](https://discord.gg/FN4XgbAwzr) and let us know what issues you're facing.
 :::
+
+## FAQ
+
+**Q: Will I automatically be refunded?**
+
+**A:** You will only be automatically be refunded if you're within the 14-day refund period and have selected **immediate termination**. If you have selected end of billing cycle you will not receive an auto refund as people do this when they only want the server for 1 month. 
+
+
+**Q: Do you save my files once my server is canceled?**
+
+**A:** No. Once your server is canceled with us all of your files are deleted once the cancellation is processed. If you want to save your files you must back up and download them prior to placing your cancellation request.
