--- a/src/content/docs/games/Valheim/adding admins.mdx
+++ b/src/content/docs/games/Valheim/adding admins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Valheim Live Adding Admins
+title: Valheim Adding Admins
 description: Learn how to add admins to your Valheim server.
 sidebar:
   label: Adding Admins
@@ -12,5 +12,5 @@ Managing player permissions—including granting administrative privileges or ba
 3. In the sidebar click on `Management > File Manager`.
 4. Select the `.config/unity3d/IronGate/Valheim/` folder.
 5. Here, find the file named `adminlist.txt`.
-6. Add a new entry on its own line in SteamID64 format. You can get your SteamID from here. It should look like this: `76561198072786081`.
+6. Add a new entry on its own line in SteamID64 format. You can get your SteamID from [here](https://steamid.io/). It should look like this: `76561198072786081`.
 7. Restart your server.
