--- a/src/content/docs/games/Palworld/update your server.mdx
+++ b/src/content/docs/games/Palworld/update your server.mdx
@@ -7,18 +7,12 @@ sidebar:
 
 By default, Game Host Bros Palworld servers will automatically update when the server is restarted. This is how you can update your server after a Palworld update. 
 
+:::danger
+Always backup your world before updating.
+:::
 
-1. Backup your server otherwise **you will** lose your world. (This is a game bug)
-2. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
-3. Click on your Palworld server.
-4. From the console, click the Restart button. 
-
-## My Palworld Server Isn't Updating
-
-If for some reason you can't connect to your Palworld server after an update, your Auto Updates may be disabled. This is how you can check and re-enable the updates for your server. 
-
-1. Log in to the [Game Host Bros Panel](https://panel.gamehostbros.com/).
-2. Select your server.
-3. Go to `Configuration > Startup Parameters`.
-4. Find the `Auto Update` setting and change the value to `1`.
-5. Restart your server.
+1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
+2. Go to `Configuration > Startup Parameters`.
+3. Find the `Auto Update` and make sure it's set to `on`.
+4. Click `Console`
+5. Click the Restart button. 
