Update update your server.mdx

--- a/src/content/docs/games/Palworld/update your server.mdx
+++ b/src/content/docs/games/Palworld/update your server.mdx
@@ -15,4 +15,6 @@ Always backup your world before updating.
 2. Go to `Configuration > Startup Parameters`.
 3. Find the `Auto Update` and make sure it's set to `on`.
 4. Click `Console`
-5. Click the Restart button. 
+5. Click the `Restart` button. 
+
+The server will now automatically download the update as soon as it starts.
