--- a/src/content/docs/games/Palworld/update your server.mdx
+++ b/src/content/docs/games/Palworld/update your server.mdx
@@ -13,7 +13,7 @@ Always backup your world before updating.
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Go to `Configuration > Startup Parameters`.
-3. Find the `Auto Update` and make sure it's set to `on`.
+3. Find the `Auto Update` toggle and make sure it's set to `on`.
 4. Click `Console`
 5. Click the `Restart` button. 
 
