--- a/src/content/docs/games/Palworld/configure palworld.mdx
+++ b/src/content/docs/games/Palworld/configure palworld.mdx
@@ -5,25 +5,14 @@ sidebar:
   label: Configure Your Server
 ---
 
-Here is how you can locate the config file for your Palworld server.
+Here's how you can locate the and edit the config file for your Palworld server. By default, we create this configuration file for you.
 
 :::danger
-Your server MUST be stopped before making changes to this file otherwise they wont save.
+Your server MUST be stopped before making changes to this file otherwise they won't save.
 :::
 
 1. Firstly, login to the [GameHostBros Panel](https://panel.gamehostbros.com/) and once there, select your Palworld Service
 2. Once on your Palworld Service, ensure you stop it before proceeding.
 3. Once stopped, on the left, navigate to `Management` then `File Manager`.
-4. Inside the File Manager, open the file `DefaultPalWorldSettings.ini`.
-5. Copy the contents and navigate to `/Pal/Saved/Config/LinuxServer/PalWorldSettings.ini`.
-6. Paste everything into `PalWorldSettings.ini` but remove the text `PublicPort=8211,PublicIP="",`.
-
-Alternatively you can copy this below and paste it directly into PalWorldSettings.ini
-
-```
-[/Script/Pal.PalGameWorldSettings]
-OptionSettings=(Difficulty=None,DayTimeSpeedRate=1.000000,NightTimeSpeedRate=1.000000,ExpRate=1.000000,PalCaptureRate=1.000000,PalSpawnNumRate=1.000000,PalDamageRateAttack=1.000000,PalDamageRateDefense=1.000000,PlayerDamageRateAttack=1.000000,PlayerDamageRateDefense=1.000000,PlayerStomachDecreaceRate=1.000000,PlayerStaminaDecreaceRate=1.000000,PlayerAutoHPRegeneRate=1.000000,PlayerAutoHpRegeneRateInSleep=1.000000,PalStomachDecreaceRate=1.000000,PalStaminaDecreaceRate=1.000000,PalAutoHPRegeneRate=1.000000,PalAutoHpRegeneRateInSleep=1.000000,BuildObjectDamageRate=1.000000,BuildObjectDeteriorationDamageRate=1.000000,CollectionDropRate=1.000000,CollectionObjectHpRate=1.000000,CollectionObjectRespawnSpeedRate=1.000000,EnemyDropItemRate=1.000000,DeathPenalty=All,bEnablePlayerToPlayerDamage=False,bEnableFriendlyFire=False,bEnableInvaderEnemy=True,bActiveUNKO=False,bEnableAimAssistPad=True,bEnableAimAssistKeyboard=False,DropItemMaxNum=3000,DropItemMaxNum_UNKO=100,BaseCampMaxNum=128,BaseCampWorkerMaxNum=15,DropItemAliveMaxHours=1.000000,bAutoResetGuildNoOnlinePlayers=False,AutoResetGuildTimeNoOnlinePlayers=72.000000,GuildPlayerMaxNum=20,PalEggDefaultHatchingTime=72.000000,WorkSpeedRate=1.000000,bIsMultiplay=False,bIsPvP=False,bCanPickupOtherGuildDeathPenaltyDrop=False,bEnableNonLoginPenalty=True,bEnableFastTravel=True,bIsStartLocationSelectByMap=True,bExistPlayerAfterLogout=False,bEnableDefenseOtherGuildPlayer=False,CoopPlayerMaxNum=4,ServerPlayerMaxNum=32,ServerName="Default Palworld Server",ServerDescription="",AdminPassword="",ServerPassword="",RCONEnabled=False,RCONPort=25575,Region="",bUseAuth=True,BanListURL="https://api.palworldgame.com/api/banlist.txt")
-
-```
-
-7. After you have made the changes you want, start the server. 
+4. Navigate to `/Pal/Saved/Config/LinuxServer/PalWorldSettings.ini`.
+5. After you have made the changes you want, start the server. 
