Update cancel your service.mdx

--- a/src/content/docs/account/cancel your service.mdx
+++ b/src/content/docs/account/cancel your service.mdx
@@ -6,7 +6,7 @@ sidebar:
   label: Cancel Your Service
 ---
 
-Cancelling your service with Game Host Bros is easy and hassle-free. Follow these simple steps to contact a bro on Discord and get your service cancelled in no time.
+Cancelling your service with Game Host Bros is easy and hassle-free. Follow these simple steps and get your service cancelled in no time.
 
 1. Login to the [Billing Portal](https://portal.gamehostbros.com/).
 2. Under Your `Active Products/Services`, look for the service you want to cancel and click `VIEW DETAILS`.
