Update upload custom map.mdx

--- a/src/content/docs/games/Factorio/upload custom map.mdx
+++ b/src/content/docs/games/Factorio/upload custom map.mdx
@@ -9,9 +9,9 @@ In this tutorial, we will guide you through the process of uploading an existing
 
 1. Navigate to your Factorio save file location.
 
-**Windows:** (Press WIN+R) - `%APPDATA%\Roaming\Factorio\Saves`
-**Mac OS:** (Press CMD+Space) - `~/Library/Application Support/factorio/saves`
-**Linux:** `~/.factorio/saves`
+- **Windows:** (Press WIN+R) - `%APPDATA%\Roaming\Factorio\Saves`
+- **Mac OS:** (Press CMD+Space) - `~/Library/Application Support/factorio/saves`
+- **Linux:** `~/.factorio/saves`
 
 2. Find the save .zip file you want to upload to your Factorio server and copy it in a safe location.
 3. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/) and stop your Factorio server.
