--- a/src/content/docs/games/Killing Floor 2/web admin.mdx
+++ b/src/content/docs/games/Killing Floor 2/web admin.mdx
@@ -10,7 +10,7 @@ Killing Floor 2 servers come with a Web Admin panel that you can use to control 
 
 ## Enable Web Admin
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
-2. Click `Startup Parameters`.
+2. Click `Configuration > Startup Parameters`.
 3. Look for `Enable WebAdmin` and set it to true.
 4. Change your `Admin Password` to something unique.
 4. Go back to the console page, then restart your server.
@@ -18,9 +18,5 @@ Killing Floor 2 servers come with a Web Admin panel that you can use to control 
 ## Accessing Web Admin
 1. Copy the IP address and port for your server (the one you use to connect to the server with)
 2. Open your web browser and paste it into the address bar.
-3. Add 2 numbers to the port and press enter. (if your IP is `172.142.57.14:27030` your Web Admin Address will be `172.142.57.14:27032`)
+3. Replace the port with the Web Admin Port in `Configuration > Startup Parameters`. (if your IP is `172.142.57.14:27030` your Web Admin Address will be `172.142.57.14:27032` for example)
 4. Login with the username `admin` and your `Admin Password` you have set above.
-
-:::tip[Did you know?]
-You can also view your Web Admin port under `Management > Allocations`. It is always the last port.
-:::
