Add soulmask and edit existing docs

--- a/src/content/docs/games/Counter-Strike 2/set a password.mdx
+++ b/src/content/docs/games/Counter-Strike 2/set a password.mdx
@@ -8,8 +8,8 @@ sidebar:
 
 This is what you do if you need to set a password on your Counter Strike 2 server.
 
-1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
-2. Click `Startup Parameters`.
+1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/) and open your CS2 server.
+2. Click `Configuration > Startup Parameters`.
 3. Look for `Server Password` and then type the password you want.
 4. Go back to the console page, then restart your server.
 
