--- a/src/content/docs/games/Soulmask/adding admins.mdx
+++ b/src/content/docs/games/Soulmask/adding admins.mdx
@@ -14,9 +14,44 @@ Here is how to add admins to your Soulmask server.
 3. Look for `Admin Password` and then type the password you want.
 4. Go back to the console page, then restart your server.
 
-## Using Admin Commands
+## Make Yourself Admin in Soulmask
 
 1. Open Soulmask and connect to your server.
 2. Once connected open press `~` tilde on your keyboard.
 3. Type `gm key YOUR-ADMIN-PASSWORD`. It should now load the admin menu.
 4. In the window, type the password again and click `Become the admin`. Now you have access to all the settings of the server.
+
+## List of Soulmask Admin Commands (GM Commands)
+
+Here is a list of the Soulmask admin commands. Once you've made yourself an admin, simply press `~` and enter your desired command.
+
+| Command Name                                   | Command Code                                |
+|------------------------------------------------|---------------------------------------------|
+| Open GM Panel                                  | gm key [password]                           |
+| Add Experience                                 | gm AddExp [value]                           |
+| Add Mask Experience                            | gm Addmjexp [value]                         |
+| Add Hunting Experience                         | gm Addshoulieexp [value]                    |
+| Increase Hunting Experience                    | gm AddShouLieExp [value]                    |
+| Reset Points                                   | gm XiDian                                   |
+| Suicide                                        | gm ZiSha 1                                  |
+| Revive                                         | gm FuHuo                                    |
+| Delete Account                                 | gm shanhao                                  |
+| View Own Location                              | GPS                                         |
+| Quick Recruit NPC (Aim at Target)              | gm ZhaoMu                                   |
+| Teleport                                       | gm Go [position_x] [position_y] [position_z]|
+| Clear All NPCs                                 | gm ClearAllNpc                              |
+| Remove Selected Target                         | gm ClearSelect                              |
+| Refresh Vegetation within Range                | gm ShuaXinZhiBei                            |
+| Show Own Information (Quality, Skill Levels, Talents, etc.) | gm ShowInfo 1              |
+| Show Character Information (Quality, Skill Levels, Talents, etc.) | gm ShowInfo 0              |
+| Invisibility                                   | gm SetAttr YinShen 1                        |
+| Disable Invisibility                           | gm SetAttr YinShen 0                        |
+| Repair Mask Nodes                              | gm JSMJ                                     |
+| Unlock All Map Information                     | gm ShowMap                                  |
+| Unlock All Tech Tree Nodes                     | gm KeJiShu                                  |
+| Display Barbarian Invasion Heat Information Chart | gm ShowReDu                             |
+| Clear All Barbarian Invasion Heat              | gm ClearAllReDu                             |
+| Increase Barbarian Invasion Heat at Current Location | gm AddReDu [value]                     |
+| Reset Tutorial Missions                        | gm ChongZhiRenWu                            |
+| View Server Status Information                 | Debuginfo 1                                 |
+| Close Server Status Information                | Debuginfo 0                                 |
