--- a/src/content/docs/games/Palworld/upload save.mdx
+++ b/src/content/docs/games/Palworld/upload save.mdx
@@ -9,7 +9,7 @@ In this tutorial, we will guide you through the process of uploading an existing
 
 You may also refer to this guide on how to [upload files to your game server.](/getting-started/uploading-files/)
 
-If you get stuck at any time, Game Host Bros offers free world transfers. Just reach out to a bro on [Discord)](https://discord.gg/FN4XgbAwzr)
+If you get stuck at any time, Game Host Bros offers free world transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
 
 :::caution
 If you're moving from a local Co-op save file, the host will have to start fresh. The saved data only applies to the externally connected players.
