Update enable voice chat.mdx

--- a/src/content/docs/games/V Rising/enable voice chat.mdx
+++ b/src/content/docs/games/V Rising/enable voice chat.mdx
@@ -5,7 +5,7 @@ sidebar:
   label: Enable Voice Chat
 ---
 
-In this guide you will learn how to enable voice chat on your V Rising server. This comes in 2 parts are you need to upload a file as well as setup a [Unity Gaming Services Account](https://dashboard.unity3d.com/gaming/login). You will also need to know how to [upload files to your game server.](/getting-started/uploading-files/).
+In this guide you will learn how to enable voice chat on your V Rising server. This comes in multiple parts as you need to upload files as well as setup a [Unity Gaming Services Account](https://dashboard.unity3d.com/gaming/login). You will also need to know how to [upload files to your game server.](/getting-started/uploading-files/).
 
 ## Setup The Vivox DLLs
 
@@ -54,4 +54,4 @@ In this guide you will learn how to enable voice chat on your V Rising server. T
 2. Navigate to `Options > Sound`.
 3. Make sure `Use Voice Chat` is enabled.
 
-If you get stuck at any time, just reach out to a bro on [Discord)](https://discord.gg/FN4XgbAwzr) or just use Discord for your voice chat.
+If you get stuck at any time, just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr) or just use Discord for your voice chat.
