--- a/src/content/docs/games/Soulmask/upload save.mdx
+++ b/src/content/docs/games/Soulmask/upload save.mdx
@@ -11,7 +11,19 @@ You may also refer to this guide on how to [upload files to your game server.](/
 
 If you get stuck at any time, Game Host Bros offers free world transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
 
-## Transfer from another Soulmask dedicated server
+## Soulmask Save File Locations
+
+Here is where the save files are located for Soulmask.
+
+**Dedicated Server:**
+- `/WS/Saved/GameplaySettings/GameXishu.json`
+- `/WS/Saved/Worlds/Dedicated/Level01_Main/world.db`
+
+**Local Windows PC:**
+- `%LOCALAPPDATA%\WS\{YOUR-STEAM-ID}\2646460\AutoGames\{YOUR-GAME-INVITE-ID}\GameXishu.json`
+- `%LOCALAPPDATA%\WS\{YOUR-STEAM-ID}\2646460\AutoGames\{YOUR-GAME-INVITE-ID}\world.db`
+
+## Transfer From Another Soulmask Dedicated Server
 
 1. On your existing server, open the file browser and download these 2 files.
 - `/WS/Saved/GameplaySettings/GameXishu.json`
@@ -21,3 +33,15 @@ If you get stuck at any time, Game Host Bros offers free world transfers. Just r
 4. Once there navigate to the same locations as above and delete the existing `GameXishu.json` and `world.db` files. (Assuming you don't want to save them, otherwise back them up)
 5. Drag in your files from your previous server.
 6. Start your Soulmask server.
+
+## Transfer From A Local PC
+
+1. Press `WIN + R` on your keyboard and type `%LOCALAPPDATA%\WS\`.
+2. You will now see some folders, navigate to the one that has your Steam ID. (Example: 76561198106341655)
+3. Navigate to `2646460\AutoGames\` and then select the folder with the same invite code as the world you want to transfer.
+4. Copy the `world.db` and the latest `GameXishu.json` file. If your file is called `GameXishu_2.json`, then rename it to `GameXishu.json`.
+5. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Soulmask server.
+6. In the Game Host Bros panel go to `Managment > File Manager`.
+7. Navigate to `/WS/Saved/GameplaySettings/` and replace the existing `GameXishu.json` file.
+8. Navigate to `/WS/Saved/Worlds/Dedicated/Level01_Main/` and replace the existing `world.db` file.
+9. Start your Soulmask server.
