add mod guide, update page titles for valheim

--- a/src/content/docs/games/Valheim/adding admins.mdx
+++ b/src/content/docs/games/Valheim/adding admins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Valheim Adding Admins
+title: How To Add Admins In Valheim
 description: Learn how to add admins to your Valheim server.
 sidebar:
   label: Adding Admins
