--- a/src/content/docs/games/Valheim/change server name.mdx
+++ b/src/content/docs/games/Valheim/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: Valheim Change Server Name
+title: How To Change Your Valheim Server Name
 description: Learn how to change your server hostname on your Valheim server.
 tableOfContents: false
 sidebar:
