--- a/src/content/docs/games/Valheim/set a password.mdx
+++ b/src/content/docs/games/Valheim/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: Valheim Setting a Password
+title: How To Set A Password On Your Valheim Server
 description: Learn how to set a password on your Valheim server.
 tableOfContents: false
 sidebar:
