--- a/src/content/docs/games/Valheim/update your server.mdx
+++ b/src/content/docs/games/Valheim/update your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Valheim Update Your Server
+title: How To Update Your Valheim Server
 description: Learn how to update your Valheim dedicated server.
 sidebar:
   label: Update Your Server
