--- a/src/content/docs/games/Valheim/upload save.mdx
+++ b/src/content/docs/games/Valheim/upload save.mdx
@@ -1,5 +1,5 @@
 ---
-title: Valheim Upload Custom World
+title: How To Upload An Existing Valheim Save To Your Server
 description: Step-by-step guide on how to upload your custom world file to your Valheim server.
 sidebar:
   label: Upload Custom World
