--- a/src/content/docs/games/Factorio/upload custom map.mdx
+++ b/src/content/docs/games/Factorio/upload custom map.mdx
@@ -7,6 +7,8 @@ sidebar:
 
 In this tutorial, we will guide you through the process of uploading an existing save file to your Factorio dedicated server. This is also handy if you're starting a new modded Factorio world that requires a custom map such as Space Exploration.
 
+If you get stuck at any time, Game Host Bros offers free save transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
+
 1. Navigate to your Factorio save file location.
 
 - **Windows:** (Press WIN+R) - `%APPDATA%\Roaming\Factorio\Saves`
