--- a/src/content/docs/games/Satisfactory/upload save.mdx
+++ b/src/content/docs/games/Satisfactory/upload save.mdx
@@ -7,6 +7,8 @@ sidebar:
 
 In this tutorial, we will guide you through the process of uploading a single-player save file to your Satisfactory dedicated server. All of this is now handled in the game itself.
 
+If you get stuck at any time, Game Host Bros offers free save transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
+
 1. Open Satisfactory.
 2. From the Satisfactory main menu, select `Server Manager` and choose the server you wish to upload the save to.
 3. Navigate to the `Manage Saves` section.
