--- a/src/content/docs/games/V Rising/install mods.mdx
+++ b/src/content/docs/games/V Rising/install mods.mdx
@@ -28,4 +28,4 @@ Once BepInEx is installed, you can now add the plugins you wish. We suggest down
 4. Navigate to `BepInEx/plugins` and upload your extracted plugin folder.
 6. Start your server.
 
-If you get stuck at any time, just reach out to a bro on [Discord)](https://discord.gg/FN4XgbAwzr) or via a support ticket.
+If you get stuck at any time, just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr) or via a support ticket.
