--- a/src/content/docs/games/V Rising/upload save.mdx
+++ b/src/content/docs/games/V Rising/upload save.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 In this tutorial, we will guide you through the process of uploading an existing world and player save file to your V Rising dedicated server.
 
-If you get stuck at any time, Game Host Bros offers free save transfers. Just reach out to a bro on [Discord)](https://discord.gg/FN4XgbAwzr)
+If you get stuck at any time, Game Host Bros offers free save transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
 
 ## Locating your existing V Rising save files
 To start we first need to get your existing save file from your local PC.
