--- a/src/content/docs/games/Valheim/install mods.mdx
+++ b/src/content/docs/games/Valheim/install mods.mdx
@@ -7,6 +7,10 @@ sidebar:
 
 In this guide, you will learn how to install mods and plugins on your Valheim server using BepInEx.
 
+:::warning
+Some mods need to be installed on your local game client too. We suggest using [r2modman](https://thunderstore.io/c/valheim/p/ebkr/r2modman/) to toggle your mods and BepInEx on and off.
+:::
+
 ## Installing BepInEx
 Before installing any mods or plugins, you must first install BepInEx
 
