--- a/src/content/docs/games/V Rising/configure your server.mdx
+++ b/src/content/docs/games/V Rising/configure your server.mdx
@@ -11,7 +11,7 @@ In V Rising, there are 2 methods to configure your server. For basic settings yo
 
 By default, this file is not created automatically. You need to use one of the base game files as a template to generate it or use the example file below.
 
-:::warning
+:::danger
 Make sure Game Setting Preset is set to blank/Unknown under Startup Parameters to use ServerGameSettings.json.
 :::
 
