Update guide titles

--- a/src/content/docs/games/Counter-Strike 2/automatic updates.mdx
+++ b/src/content/docs/games/Counter-Strike 2/automatic updates.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Automatic Updates
+title: How To Automatically Update Your CS2 Server
 description: Learn how to setup automatic updates for your CS2 server.
 tableOfContents: true
 sidebar:
