--- a/src/content/docs/games/Counter-Strike 2/change server name.mdx
+++ b/src/content/docs/games/Counter-Strike 2/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Change Server Name
+title: How To Change Your CS2 Server Name
 description: Learn how to change your server hostname on your CS2 server.
 tableOfContents: false
 sidebar:
