--- a/src/content/docs/games/Counter-Strike 2/config files.mdx
+++ b/src/content/docs/games/Counter-Strike 2/config files.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Config Files
+title: How To Edit CS2 Server Config Files
 description: Learn how to edit your config files on your CS2 server.
 sidebar:
   label: Config Files
