--- a/src/content/docs/games/Counter-Strike 2/create gslt.mdx
+++ b/src/content/docs/games/Counter-Strike 2/create gslt.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Create GSLT (Steam Game Server Login Token)
+title: How To Create A GSLT For CS2 (Steam Game Server Login Token)
 description: Learn how to create a GSLT for your CS2 server.
 sidebar:
   label: Create GSLT
