--- a/src/content/docs/games/Counter-Strike 2/game modes.mdx
+++ b/src/content/docs/games/Counter-Strike 2/game modes.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Game Modes
+title: How To Change Game Modes In CS2
 description: Learn how to change the game modes on your CS2 server.
 sidebar:
   label: Game Modes
