--- a/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
+++ b/src/content/docs/games/Counter-Strike 2/play workshop maps.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Play Workshop Maps
+title: How To Play Workshop Maps On Your CS2 Server
 description: Learn how to play workshop maps with friends on your server.
 sidebar:
   label: Play Workshop Maps
