--- a/src/content/docs/games/Counter-Strike 2/rcon.mdx
+++ b/src/content/docs/games/Counter-Strike 2/rcon.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 RCON
+title: How To Use RCON On Your CS2 Server
 description: Learn how to use RCON on your CS2 server.
 tableOfContents: false
 sidebar:
