--- a/src/content/docs/games/Counter-Strike 2/set a password.mdx
+++ b/src/content/docs/games/Counter-Strike 2/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Setting a Password
+title: How To Set A Password On Your CS2 Server
 description: Learn how to set a password on your CS2 server.
 tableOfContents: false
 sidebar:
