--- a/src/content/docs/games/Counter-Strike 2/connect to your server.mdx
+++ b/src/content/docs/games/Counter-Strike 2/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS2 Connect to Your Server
+title: How To Connect To Your CS2 Server
 description: Learn how to join your CS2 dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
