--- a/src/content/docs/games/Sons Of The Forest/upload save.mdx
+++ b/src/content/docs/games/Sons Of The Forest/upload save.mdx
@@ -9,7 +9,7 @@ In this tutorial, we will guide you through the process of uploading an existing
 
 If you get stuck at any time, Game Host Bros offers free save transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
 
-:::warning
+:::danger
 You **MUST** convert any single player save to a multiplayer save on your local PC first before uploading it to your server. Doing this means the host doesn't keep their inventory so store it or give it to a friend first.
 :::
 
